<resources>
    <string name="app_name">Dino Run Start Menu</string>
    <string name="restart">Restart</string>
    <string name="score">Score:</string>
    <string name="game_over">Game Over</string>
    <string name="start">Start</string>
    <string name="instructions">Instructions</string>
    <string name="high_scores">High Scores</string>
    <string name="dino_run">Dino Run</string>
</resources>